tests/NormalTests/paczka1/fuzzy1/89273126.err
Error in line 13: IlWxpm S43 16,6
Error in line 29: IlWxpm A397 182,7
Error in line 31: YyU A535 84,1
